# codeweight

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  metrics.rs  scorer.rs  walker.rs
src/analyzer/: java.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/reporter/: json.rs  mod.rs  table.rs
tests/: integration_test.rs
tests/fixtures/: sample.java  sample.js  sample.py  sample.rs  sample_complex.py
