[package]
name = "codeweight"
version = "0.1.1"
edition = "2021"
description = "Static code complexity analyzer for Python, JavaScript/TypeScript, Rust, and Java"
license = "MIT"
readme = "README.md"

[lib]
name = "codeweight"
path = "src/lib.rs"

[[bin]]
name = "codeweight"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
comfy-table = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
